# Zenith

./: .gitignore  CMakeLists.txt  README.md  main.py
CPP/header/: Conv2D.h  Datapoint.h  Dense.h  Flatten.h  Layer.h  Matrix.h  MaxPooling.h  NMath.h  Network.h  Testing.h
CPP/source/: Bindings.cpp  Conv2D.cpp  Dense.cpp  Flatten.cpp  Matrix.cpp  MaxPooling.cpp  NMath.cpp  Network.cpp  Testing.cpp
